c4prj3_finish/grade.txt
Grading at Thu Apr  4 09:03:12 UTC 2019
Running 'make clean' to do a clean build of your project
rm -rf *.o poker *~
Running 'make poker OTHERFLAGS=-O3' to build your project
gcc -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3   -c -o cards.o cards.c
gcc -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3   -c -o deck.o deck.c
gcc -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3   -c -o eval.o eval.c
eval.c: In function ‘build_hand_from_match’:
eval.c:203:9: error: break statement not within loop or switch
         break;
         ^
<builtin>: recipe for target 'eval.o' failed
make: *** [eval.o] Error 1
make failed

Overall Grade: F
